--- a/location/build.gradle
+++ b/location/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
 
 android {
     compileSdkVersion 21
@@ -19,6 +20,9 @@ android {
 }
 
 dependencies {
+    repositories {
+        mavenCentral()
+    }
     compile fileTree(dir: 'libs', include: ['*.jar'])
     provided 'com.google.android.gms:play-services-location:6.5.+'
 }
